--- a/karabiner/install_karabiner_elements.html
+++ b/karabiner/install_karabiner_elements.html
@@ -1,1 +1,5 @@
-<a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/karabiner_elements.json">remap</a>
+<html>
+  <body>
+    <a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/karabiner_elements.json">Install Karabiner Elements configuration</a>
+  </body>
+</html>
