--- a/karabiner/install_karabiner_elements.html
+++ b/karabiner/install_karabiner_elements.html
@@ -1,5 +1,6 @@
 <html>
   <body>
     <a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/karabiner_elements.json">Install Karabiner Elements configuration</a>
+    <a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/cmd_comma.json">Install Cmd+Comma</a>
   </body>
 </html>
