add Cmd+Brackets tab movements

--- a/karabiner/install_karabiner_elements.html
+++ b/karabiner/install_karabiner_elements.html
@@ -6,5 +6,8 @@
     <div>
       <a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/cmd_comma.json">Install Cmd+Comma -> Ctrl+Comma</a>
     </div>
+    <div>
+      <a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/cmd_brackets.json">Install Cmd+Brackets tab movements</a>
+    </div>
   </body>
 </html>
