--- a/karabiner/install_karabiner_elements.html
+++ b/karabiner/install_karabiner_elements.html
@@ -1,5 +1,7 @@
 <html>
   <body>
+    <h3>Useful OSX keymappings</h3>
+    <p>Open the file locally and click the following links to install all the mappings</p>
     <div>
       <a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/karabiner_elements.json">Install Karabiner Elements configuration</a>
     </div>
