--- a/karabiner/install_karabiner_elements.html
+++ b/karabiner/install_karabiner_elements.html
@@ -6,7 +6,7 @@
       <a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/karabiner_elements.json">Install Karabiner Elements configuration</a>
     </div>
     <div>
-      <a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/cmd_comma.json">Install Cmd+Comma -> Ctrl+Comma</a>
+      <a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/cmd_comma.json">Install Cmd+Comma -> Ctrl+Hyphen</a>
     </div>
     <div>
       <a href="karabiner://karabiner/assets/complex_modifications/import?url=https://raw.githubusercontent.com/abtv/dotfiles/master/karabiner/cmd_brackets.json">Install Cmd+Brackets tab movements</a>
